2/28/2014
- add implicit client support
- support passing long/float values in app headers

2/26/2014
- add configurable timestamp check in state

2/19/2014
- correct OP metadata validation: userinfo_endpoint is optional, not mandatory

2/18/2014
- add configurable cookie-only-based (zero server state) session mode

2/12/2014
- minor correction in documentation on config primitives
- move config checks from request handler to post_config hook (and fix oauth config check at the same time)

1/27/2014
- require TLS for AS/OP endpoints

1/23/2014
- adhere to more strict JSON compliancy in what we send
- be more liberal in accepting "iss" values ending with a trailing slash
- debug printout of id_token payload on validating it
- avoid complaining about aud/azp matching if there's only one value in the aud array
- change author's e-mail address
- remove some unused variables and silence compiler warnings
- add autoconfigure/automake stuff

1/19/2014
- fix registration-endpoint-does-not-exist-in-metadata logic null pointer core dump
- Apache 2.4 fix in oidc_authz.c
- fixes in debug/error printout, spelling, syntax etc.
- apply eclipse code formatting and indentation

1/15/2014
- check for mandatory settings in the configuration
- present user facing text in discovery errors
- use proper (curl) url-encode/url-decode routines
- re-organize metadata handling (incl. validation)
- move stuff around to oidc_util.c, oidc_proto.c and some renaming

1/9/2014
- version 1.0