@@ -1,3 +1,8 @@
+3/6/2014
+- support configuring/overriding the token_endpoint authentication method in client metadata
+- improve HTTP call result checking for downloading Google JWKs
+- minor documentation updates
+
 2/28/2014
 - add implicit client support
 - support passing long/float values in app headers
